# regresslm

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: targets.py
examples/datasets/: support_triage.yaml
scripts/: demo.sh  make_screenshots.py
src/regresslm/: __init__.py  cli.py  config.py  dataset.py  drift.py  gate.py  runner.py  schema.py  store.py
src/regresslm/scorers/: __init__.py  base.py  deterministic.py  judge.py
tests/: test_runner_gate_drift.py  test_scorers.py
